fix: html files

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <div class="sidebar">
             <div class="photo_wrapper">
-                <img src="C:\Users\elena\rsschool-cv\cv foto.jpeg" alt="my cv foto">
+                <img src="cv foto.jpeg" alt="my cv foto">
             </div>
             <div class="sidebar_content">
                 <h3>Contact information:</h3>
