fix: html files

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <div class="sidebar">
             <div class="photo_wrapper">
-                <img src="cv foto.jpeg" alt="my cv foto">
+                <img src="cv-foto.jpeg" alt="my cv foto">
             </div>
             <div class="sidebar_content">
                 <h3>Contact information:</h3>
@@ -88,10 +88,11 @@ function getPrices(taxBoolean) {
                 <li>German – C1/Upper-intermediate</li>
                 <li>Russian - Nativ</li>
             </ul>
+        </section>
     </main>
     <footer>
         <a href="https://rs.school/js/"><img src="rs_school_js.svg" alt="rsschool" /></a>
-        <p>2023 <a href="https://github.com/ElenaRassokhina" alt="My GitHub">Elena Rassokhina</a></p>
+        <p>2023 <a href="https://github.com/ElenaRassokhina">Elena Rassokhina</a></p>
     </footer>
 </body>
 
